[package]
name = "freezie"
version = "0.1.0"
authors = ["BlueCat Networks <support@bluecatnetworks.com>"]
edition = "2021"
# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
freezie is a small library that disables mutation for the contained type
"""
# These URLs point to more information about the repository
documentation = "https://docs.rs/freezie"
repository = "https://github.com/bluecatengineering/freezie"
# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"
# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["freeze", "immutable"]
categories = ["memory-management", "data-structures"]
# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from https://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT"
